# hermes-evol

./: .gitignore  AGENTS.md  CLAUDE.md  DEPRECATED.md  README.md  __init__.py  install.sh  plugin.yaml  project_knowledge.json  pyproject.toml  test_focused.py  test_global_full.py  test_profile.py  test_universal.py
.github/: workflow-log.jsonl
.github/scripts/: knowledge.py
.github/workflows/: ci.yml
cycles/2026-06-04-LLM-10-agents/: CYCLE_REPORT.md
digests/: analyst.yaml  architect.yaml  coder.yaml  conductor.yaml  operative.yaml  orchestrator.yaml  researcher.yaml  reviewer.yaml  shadow.yaml  valmet.yaml
hermes_evol/: __init__.py  commands.py  config.py  engine.py  knowledge.py  plugin.py  registry.py  stores.py  tier2_memory.py
profiles/analyst/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  evol.jsonl
profiles/architect/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  evol.jsonl
profiles/coder/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  evol.jsonl
profiles/conductor/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  evol.jsonl
profiles/operative/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  evol.jsonl
profiles/orchestrator/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  evol.jsonl
profiles/researcher/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  evol.jsonl
profiles/reviewer/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  evol.jsonl
profiles/shadow/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  evol.jsonl
profiles/valmet/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  evol.jsonl
tests/: test_config_roundtrip.py  test_engine.py  test_plugin.py
(+35 files in other folders)
