[project]
name = "hermes-evol"
version = "0.2.0"
description = "EVOL — Subconscious observer plugin for Hermes Agent"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
